# rag_control

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: code-quality.yml  coverage.yml  e2e-tests.yml  unit-tests.yml
docs/: .gitignore  README.md  docusaurus.config.js  package.json  sidebars.js
docs/docs/: index.md  license.md
docs/docs/adapters/: _category_.json  openai-adapter.md  pinecone-adapter.md
docs/docs/api/: adapters.md  engine.md  exceptions.md  governance.md  models.md  policies.md  policy-gov-config.md
docs/docs/architecture/: components.md  execution-flow.md  overview.md
docs/docs/concepts/: adapters.md  filters.md  governance.md  overview.md  (+1 more)
examples/: policy_config.yaml
rag_control/: __init__.py  contracts.py  version.py
rag_control/adapters/: __init__.py  exceptions.py  llm.py  query_embedding.py  vector_store.py
rag_control/core/: config_loader.py  engine.py  prompt.py
rag_control/exceptions/: __init__.py  adapter.py  base.py  control_plane_config.py  embedding_model.py  enforcement.py  governance.py  rule.py
rag_control/filter/: filter.py
rag_control/governance/: gov.py
rag_control/models/: __init__.py  access_control.py  access_rule.py  config.py  deny_rule.py  document.py  filter.py  llm.py  llm_response.py  operator.py  org.py  policy.py  policy_rule.py  query_embedding.py  rule.py  run.py  user_context.py  vector_store.py
rag_control/observability/: __init__.py  audit_logger.py  metrics.py  tracing.py
rag_control/policy/: base.py  policy.py
rag_control/prompt/: base.py  prompt.py
rag_control/spec/: audit_log_contract.md  control_plane_config_contract.md  execution_contract.md  governance_contract.md  llm_adapter_contract.md  metrics_contract.md  query_embedding_adapter_contract.md  tracing_contract.md  vector_store_adapter_contract.md
tests/: conftest.py
tests/e2e/: test_audit_logs_e2e.py  test_embedding_model_compatibility.py  test_metrics_e2e.py  test_otel_tracing_e2e.py  test_rag_control_config_e2e.py  test_rag_control_e2e.py  test_tracing_e2e.py
tests/unit/: test_adapter_exceptions.py  test_audit_logger.py  test_config_loader.py  test_config_validation_edges.py  test_coverage_edges.py  test_filter.py  test_governance_registry.py  test_metrics.py  test_org.py  test_policy.py  test_prompt_builder.py  test_rule.py  test_tracing.py  test_user_context.py
tests/utils/: __init__.py  fake_llm.py  fake_query_embedding.py  fake_vector_store.py
(+15 files in other folders)
