[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_control"
version = "0.1.0"
authors = [{ name = "RetrievalLabs" }]
description = "A runtime governance, security and execution control layer for Retrieval-Augmented Generation (RAG) systems."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

keywords = [
  "rag",
  "llm",
  "governance",
  "ai-security",
  "retrieval",
  "rbac",
  "hallucination",
  "enterprise-ai"
]

dependencies = []

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.15.1",
]
