[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_control"
version = "0.1.3"
authors = [{ name = "RetrievalLabs" }]
description = "A runtime governance, security and execution control layer for Retrieval-Augmented Generation (RAG) systems."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

keywords = [
  "rag",
  "llm",
  "governance",
  "ai-security",
  "retrieval",
  "rbac",
  "hallucination",
  "enterprise-ai"
]

dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0.3",
  "structlog>=24.4.0",
  "opentelemetry-api>=1.33.1",
  "opentelemetry-sdk>=1.33.1",
]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[tool.setuptools.package-data]
rag_control = ["py.typed"]

[tool.coverage.run]
source = ["rag_control"]

[tool.coverage.report]
show_missing = true
skip_covered = false
omit = ["tests/*"]
